--- a/article.html
+++ b/article.html
@@ -11,7 +11,7 @@
 
 	<body>
 <div id="image">
- <img src="../images/french2.jpg">       
+ <img src="images/french2.jpg">       
         </div>
 <div id="cover">
     <h1 class="title">French Bulldog Temperament
